FIX PWA Safari Issue: Đường dẫn GitHub Pages đúng
 Root Cause:
- start_url và scope sai: '/' thay vì '/hybrid-tranning/'
- Service Worker paths không đúng với GitHub Pages
- Icon type mismatch (SVG nhưng khai báo PNG)

 Solutions:
- Cập nhật start_url: '/hybrid-tranning/' (Safari sẽ Add to Home Screen đúng URL)
- Cập nhật scope: '/hybrid-tranning/' (PWA boundary đúng)
- Sửa SW registration: '/hybrid-tranning/sw.js'
- Cập nhật tất cả static paths trong SW
- Sửa icon type: 'image/svg+xml' (đúng format file)
- Cập nhật notification paths
- Sửa shortcuts URLs

 Safari Test:
- Vào https://tryhn151.github.io/hybrid-tranning/
- Add to Home Screen sẽ có URL đúng
- Icon và name hiển thị chính xác
- Standalone mode hoạt động

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
         function initializePWA() {
             // Register Service Worker
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('/hybrid-tranning/sw.js')
                     .then(registration => {
                         console.log('✅ SW registered:', registration);
                         checkForSWUpdate(registration);
