--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@
             <h3 id="modal-title" class="text-2xl font-bold text-gray-800 mb-4"></h3>
             <div class="mb-4 border-b border-gray-200">
                 <nav class="flex space-x-2" aria-label="Tabs">
-                    <button id="tab-image" class="tab-btn active-tab">Ảnh Minh Họa</button>
-                    <button id="tab-video" class="tab-btn">Video</button>
+                    <button id="tab-video" class="tab-btn active-tab">Video Hướng Dẫn</button>
                 </nav>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -564,7 +563,6 @@
         const modalTitle = document.getElementById('modal-title');
         const modalDescription = document.getElementById('modal-description');
         const mediaContainer = document.getElementById('media-container');
-        const tabImage = document.getElementById('tab-image');
         const tabVideo = document.getElementById('tab-video');
         let currentExerciseForModal = null;
 
@@ -572,16 +570,7 @@
             mediaContainer.innerHTML = '';
             if (!currentExerciseForModal) return;
 
-            if (type === 'image' && currentExerciseForModal.imageUrl) {
-                const img = document.createElement('img');
-                img.src = currentExerciseForModal.imageUrl;
-                img.alt = `Minh họa bài tập ${modalTitle.textContent}`;
-                img.className = 'w-full h-full object-contain';
-                img.onerror = () => { img.src = 'https://placehold.co/600x400/e2e8f0/64748b?text=Image+Not+Found'; };
-                mediaContainer.appendChild(img);
-                tabImage.classList.add('active-tab');
-                tabVideo.classList.remove('active-tab');
-            } else if (type === 'video' && currentExerciseForModal.videoUrl) {
+            if (type === 'video' && currentExerciseForModal.videoUrl) {
                 const iframe = document.createElement('iframe');
                 iframe.className = 'w-full h-full absolute top-0 left-0';
                 iframe.src = currentExerciseForModal.videoUrl;
@@ -596,7 +585,19 @@
                 mediaContainer.appendChild(wrapper);
 
                 tabVideo.classList.add('active-tab');
-                tabImage.classList.remove('active-tab');
+            } else {
+                // Hiển thị thông báo khi không có video
+                const noVideoMsg = document.createElement('div');
+                noVideoMsg.className = 'w-full h-full flex items-center justify-center bg-gray-100 rounded-lg';
+                noVideoMsg.innerHTML = `
+                    <div class="text-center text-gray-500">
+                        <span class="text-4xl mb-2 block">🎥</span>
+                        <p class="font-medium">Chưa có video hướng dẫn</p>
+                        <p class="text-sm">Vui lòng tham khảo phần mô tả bên dưới</p>
+                    </div>
+                `;
+                mediaContainer.appendChild(noVideoMsg);
+                tabVideo.classList.add('active-tab');
             }
         }
 
@@ -628,11 +629,9 @@
                 </div>
             `;
 
-            tabVideo.classList.toggle('hidden', !exercise.videoUrl);
-            tabImage.classList.add('active-tab');
-            tabVideo.classList.remove('active-tab');
+            tabVideo.classList.add('active-tab');
 
-            updateMedia('image');
+            updateMedia('video');
 
             modal.classList.remove('hidden');
             setTimeout(() => {
@@ -651,7 +650,6 @@
             }, 300);
         }
         
-        tabImage.addEventListener('click', () => updateMedia('image'));
         tabVideo.addEventListener('click', () => updateMedia('video'));
         closeModalBtn.addEventListener('click', hideModal);
         modal.addEventListener('click', e => e.target === modal && hideModal());
@@ -754,8 +752,7 @@
                                                 <p class="text-xs text-gray-600 mt-1 line-clamp-2">${ex.description.split('\\n')[0]}</p>
                                             </div>
                                             <div class="flex items-center ml-3">
-                                                ${ex.imageUrl ? '<span class="text-lg">📸</span>' : ''}
-                                                ${ex.videoUrl ? '<span class="text-lg ml-1">🎥</span>' : ''}
+                                                ${ex.videoUrl ? '<span class="text-lg">🎥</span>' : '<span class="text-gray-400 text-lg">📝</span>'}
                                                 <span class="text-gray-400 ml-2">▶</span>
                                             </div>
                                         </div>
@@ -765,7 +762,7 @@
                         </div>
                         <div class="mt-3 p-3 bg-amber-50 rounded-lg">
                             <p class="text-xs text-amber-700">
-                                <span class="font-medium">💡 Lưu ý:</span> Click vào bài tập để xem hướng dẫn chi tiết, ảnh minh họa và video
+                                <span class="font-medium">💡 Lưu ý:</span> Click vào bài tập để xem hướng dẫn chi tiết và video hướng dẫn
                             </p>
                         </div>
                     </div>
