--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 reps: "4x6-8", 
                 description: "Đứng chân rộng bằng hông, ống chân gần tạ. Nắm tạ, tay rộng hơn vai.\nGiữ lưng thẳng, ngực ưỡn. Kéo bằng cách đạp mạnh chân xuống sàn.\nKhi đứng thẳng, kéo vai về sau. Hạ tạ bằng cách đảo ngược chuyển động.", 
                 imageUrl: "https://www.bodybuilding.com/images/2020/xdb/cropped/xdb-59b-barbell-deadlift-m1-square-600x600.jpg", 
-                videoUrl: "https://www.youtube.com/embed/hCDzSR6bW10" 
+                videoUrl: "https://www.youtube.com/watch?v=7Q_GnXm7LbI&ab_channel=ScottHermanFitness" 
             },
             "Pull-ups": { 
                 reps: "4x8-12", 
@@ -456,13 +456,13 @@
                 reps: "3x8-10", 
                 description: "Gập người ở hông, giữ lưng thẳng gần song song với sàn. Nắm tạ đòn.\nKéo tạ về phía bụng dưới, ép hai bả vai vào nhau.\nTừ từ hạ tạ xuống.", 
                 imageUrl: "https://www.bodybuilding.com/images/2020/xdb/cropped/xdb-45b-bent-over-barbell-row-m1-square-600x600.jpg", 
-                videoUrl: "https://www.youtube.com/embed/vT2GjY_Umpw" 
+                videoUrl: "https://www.youtube.com/watch?v=9efgcAjQe7E&ab_channel=ScottHermanFitness" 
             },
             "Face Pulls": { 
                 reps: "3x15-20", 
                 description: "Dùng dây thừng trên máy kéo cáp đặt ở tầm cao. Kéo dây về phía mặt, đồng thời xoay hai tay ra ngoài.\nÉp chặt hai bả vai vào nhau ở cuối động tác.", 
                 imageUrl: "https://www.bodybuilding.com/images/2020/xdb/cropped/xdb-8c-cable-face-pull-m1-square-600x600.jpg", 
-                videoUrl: "https://www.youtube.com/embed/V8dZ3pyiCBo" 
+                videoUrl: "https://www.youtube.com/watch?v=rep-qVOkqgk&ab_channel=ScottHermanFitness" 
             },
             "Barbell Curls": { 
                 reps: "3x10-12", 
@@ -480,7 +480,7 @@
                 reps: "3x10-12", 
                 description: "Giữ tạ đòn trước đùi. Đẩy hông ra sau, gập người về phía trước.\nGiữ lưng thẳng, gối hơi cong. Hạ tạ đến khi cảm thấy cơ đùi sau căng.\nDùng mông và đùi sau kéo người lại.", 
                 imageUrl: "https://www.bodybuilding.com/images/2020/xdb/cropped/xdb-60b-barbell-romanian-deadlift-m1-square-600x600.jpg", 
-                videoUrl: "https://www.youtube.com/embed/JCX0TlL-_20" 
+                videoUrl: "https://www.youtube.com/watch?v=JCXUYuzwNrM&ab_channel=ScottHermanFitness" 
             },
             "Dumbbell Lunges": { 
                 reps: "3x10-12/chân", 
@@ -492,13 +492,13 @@
                 reps: "3x12-15", 
                 description: "Ngồi vào máy, đặt chân lên bàn đạp rộng bằng vai.\nTừ từ hạ bàn đạp xuống đến khi gối tạo góc 90 độ.\nĐẩy mạnh bàn đạp lại, không khóa khớp gối.", 
                 imageUrl: "https://www.bodybuilding.com/images/2020/xdb/cropped/xdb-67m-leg-press-m1-square-600x600.jpg", 
-                videoUrl: "https://www.youtube.com/embed/IZ_9qg0o_b4" 
+                videoUrl: "https://www.youtube.com/watch?v=oujca3_Shgw&ab_channel=ScottHermanFitness" 
             },
             "Standing Calf Raises": { 
                 reps: "4x15-20", 
                 description: "Đứng trên bục, chỉ để nửa bàn chân trước trên bục.\nHạ gót chân xuống thấp nhất có thể.\nNhón gót chân lên cao nhất có thể.", 
                 imageUrl: "https://www.bodybuilding.com/images/2020/xdb/cropped/xdb-72m-standing-calf-raise-m1-square-600x600.jpg", 
-                videoUrl: "https://www.youtube.com/embed/d2-g20A54-M" 
+                videoUrl: "https://www.youtube.com/watch?v=YMmgqO8Jo-k&ab_channel=ScottHermanFitness" 
             }
         };
         const trainingPlan = {
